--- a/src/main/webapp/resources/css/store/storeList.css
+++ b/src/main/webapp/resources/css/store/storeList.css
@@ -1,410 +1,516 @@
 @charset "UTF-8";
-#container {
-	border-top: 1px solid #e9e4d2;
-	width: 100%;
-	min-width: 980px;
-	min-height: 669px;
-	position: relative;
-	padding-top: 30px;
-}
-#content {
-	width: 100%;
-	position: relative;
-}
-.store_top {
-	overflow: hidden;
-	background: url("../../images/store/store_top.jpg") 50% no-repeat;
-	position: absolute;
-	width: 100%;
-	height: 400px;
-}
-.product_wrap{
-	width: 100%;
-	position: absolute;
-	margin-top: 420px;
-}
-.product_inner{
-	width: 980px;
-	margin: 0 auto;
-	padding: 30px 0 10px;
-}
-.product_index{
-}
-.sticky {
-	position: fixed;
-	top: 0;
-	width: 100%;
-	z-index: 1000;
-	border-top-color: #fff;
-}
-.bg_fixedIndex{
-	background: #fff;
-}
-.tab_mallmenu{
-	overflow: hidden;
-	width: 980px;
-	height: 50px;
-}
-.tab_mallmenu li {
-	float: left;
-	width: 163.3px;
-	height: 48px;
-	border: 1px solid #c0c0c0;
-	border-left: 0;
-	border-right: 0;
-}
-.tab_mallmenu li span {
-	position: relative;
-	display: block;
-	padding: 16px 0;
-	text-align: center;
-	font-size: 14px;
-	color: #231f20;
-	-webkit-box-sizing: border-box;
-	cursor: pointer;
-}
-.tab_mallmenu li.current span {
-	color: #fff;
-	background-color: #231f20;
-	border-color: #231f20;
-	z-index: 1;
-}
-.tab_mallmenu li:first-child span::before {
-	background: none;
-}
-.tab_mallmenu li span:before {
-	content: '';
-	display: block;
-	position: absolute;
-	width: 1px;
-	height: 16px;
-	background: #e5e5e5;
-}
-.tab_mallmenu li.current span:before {
-	background-color: #231f20;
+
+@font-face {
+	font-family: 'Noto Sans KR';
+	font-style: normal;
+	font-weight: 100;
+	src: url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Thin.woff2)
+		format('woff2'),
+		url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Thin.woff)
+		format('woff'),
+		url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Thin.otf)
+		format('opentype');
 }
 
-/* 메뉴탭  */
-.menuTab {
-	display: none;
-	/* background-color: lightblue; */
-	color: #000;
+@font-face {
+	font-family: 'Noto Sans KR';
+	font-style: normal;
+	font-weight: 300;
+	src: url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Light.woff2)
+		format('woff2'),
+		url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Light.woff)
+		format('woff'),
+		url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Light.otf)
+		format('opentype');
 }
-.menuTab.current {
-	display: block;
+
+@font-face {
+	font-family: 'Noto Sans KR';
+	font-style: normal;
+	font-weight: 400;
+	src: url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Regular.woff2)
+		format('woff2'),
+		url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Regular.woff)
+		format('woff'),
+		url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Regular.otf)
+		format('opentype');
 }
-/************************************/
-/*품목*/
-.product_molist {
-	overflow: hidden;
-	margin: 0 0 30px 0;
-	text-align: center;
+
+@font-face {
+	font-family: 'Noto Sans KR';
+	font-style: normal;
+	font-weight: 500;
+	src: url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Medium.woff2)
+		format('woff2'),
+		url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Medium.woff)
+		format('woff'),
+		url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Medium.otf)
+		format('opentype');
 }
-.product_molist.topline {
-	border-top: 1px solid #dfdfdf;
+
+@font-face {
+	font-family: 'Noto Sans KR';
+	font-style: normal;
+	font-weight: 700;
+	src: url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Bold.woff2)
+		format('woff2'),
+		url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Bold.woff)
+		format('woff'),
+		url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Bold.otf)
+		format('opentype');
 }
-.product_molist li {
-	display: inline-block;
+
+@font-face {
+	font-family: 'Noto Sans KR';
+	font-style: normal;
+	font-weight: 900;
+	src: url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Black.woff2)
+		format('woff2'),
+		url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Black.woff)
+		format('woff'),
+		url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Black.otf)
+		format('opentype');
+}
+
+/* body, h1, h2, h3, h4, h5, h6, input, textarea, select {
+	font-family: 'Noto Sans KR', sans-serif;
+} */
+
+body, input, select, textarea, button {
+    font-family:'Noto Sans KR', sans-serif;
+    line-height: 1;
+    letter-spacing: -.05em;
+    color: #4c4c4c;
+    font-size: 12px;
+    max-width: 100%;
+}
+
+body {
+	height: 100%;
+	margin: 0;
+}
+a, a:hover {
+	background-color: transparent;
+    text-decoration: none;
+    color: inherit;
+}
+
+#container {
 	position: relative;
-    width: 250px;
-    padding: 0 30px;
 }
-.product_molist:last-child {
-	text-align: left;
-	margin-left: 13px;
+
+#main {
+	border-bottom: 1px solid #f7f7f7;
 }
-.molthum {
-	display: block;
-    overflow: hidden;
-    /* width: 300px; */
-    /* height: 250px; */
-    padding-top: 40px;
+
+#content {
+	position: relative;
+	min-width: 1050px;
+	padding-bottom: 60px;
+	min-width: 1050px;
 }
-.product_molist li
-.product_btn {
-	display: block;
+
+.page_article {
+	width: 1050px;
+	margin: 0 auto;
 }
-.product_molist li:hover
-a.product_btn .molthum:before {
-	content: '';
-	display: block;
-	position: absolute;
-	width: 250px;
-	height: 250px;
-	background-color: #000;
-	opacity: .2;
-	z-index: 3;
+
+.page_article * {
+	font-family: 'Noto Sans KR', sans-serif;
+	font-weight: 400;
+	letter-spacing: 0;
 }
-.molthum img {
-	
+
+#lnbMenu {
+	padding-top: 26px;
 }
-.listinfo {
-	display: block;
-	/* height: 120px; */
-    padding: 20px 15px 20px;
-    color: #231f20;
+
+.inner_lnb {
+	position: relative;
+}
+
+#lnbMenu .tit {
+	padding-top: 23px;
+    font-weight: 500;
+    font-size: 28px;
+    color: #333;
+    line-height: 35px;
+    letter-spacing: -1px;
     text-align: center;
 }
-.listinfo .tit {
+#lnbMenu .list.on {
 	display: block;
-	padding-bottom: 15px;
-    font-size: 17px;
-    font-weight: bold;
-    line-height: 26px;
 }
-.listinfo .desc {
+
+#lnbMenu .list {
+	/* display: none; */
+	overflow: hidden;
+    margin-top: 23px;
+    padding: 12px 0 29px;
+    border: 1px solid #e2e2e2;
+}
+
+#lnbMenu li {
+	float: left;
+    width: 262px;
+    padding: 16px 44px 0 39px;
+}
+
+#lnbMenu li a {
+	overflow: hidden;
+    float: left;
+    max-width: 180px;
+    line-height: 20px;
+    font-size: 14px;
+    color: #333;
+    letter-spacing: -1px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    cursor: pointer;
+}
+
+#lnbMenu li a:hover, #lnbMenu li .on {
+	font-weight: 700;
+    color: #5f0080;
+}
+
+#goodsList .sort_menu {
+	padding-top: 19px;
+}
+
+#goodsList .count {
+	float: left;
+}
+
+#goodsList .count .inner_count {
+	font-size: 12px;
+	color: #333;
+	line-height: 18px;
+}
+
+#goodsList .sort_menu .name_select {
+	display: none;
+}
+
+#goodsList .sort_menu .list {
+	float: right;
+}
+
+#goodsList .sort_menu .list li {
+	position: relative;
+	z-index: 2;
+	float: left;
+	padding: 0 10px 0 8px;
+}
+
+#goodsList .sort_menu .list a {
+	font-size: 12px;
+	color: #999;
+	line-height: 18px;
+	letter-spacing: -.3px;
+	cursor: pointer;
+}
+
+#goodsList .sort_menu .list a.on, #goodsList .sort_menu .list a:hover {
+	color: #333;
+}
+
+#goodsList .sort_menu .recommend {
+	position: relative;
+	float: right;
+}
+
+#goodsList .sort_menu .layer_recommend {
+	display: none;
+	position: relative;
+	left: -50px;
+	top: 27px;
+	min-width: 272px;
+	padding: 13px 14px;
+	border: 1px solid #333;
+	border-radius: 3px;
+	background-color: #fff;
+	font-size: 12px;
+	color: #666;
+	line-height: 16px;
+	letter-spacing: 0;
+	white-space: nowrap;
+}
+
+#goodsList .sort_menu .list li:after {
+	content: "";
+	position: absolute;
+	right: 0;
+	top: 6px;
+	width: 1px;
+	height: 10px;
+	background-color: #e5e5e5;
+}
+
+#goodsList .sort_menu .list li:last-child {
+	padding-right: 0;
+}
+
+#goodsList .sort_menu .list li:last-child:after {
+	display: none;
+}
+
+#goodsList .sort_menu:after {
+	content: "";
 	display: block;
-    vertical-align: middle;
-    color: #231f20;
-    font-size: 15px;
-    font-weight: bold;
-    line-height: 15px;
+	overflow: hidden;
+	width: 100%;
+	height: 0;
+	clear: both;
+}
+
+#goodsList .list_goods {
+	overflow: hidden;
+}
+
+#goodsList .list_goods .inner_listgoods {
+	overflow: hidden;
+	width: 1050px;
+}
+
+#goodsList .list_goods .list {
+	overflow: hidden;
+    width: 1070px;
+    margin-top: -10px;
+}
+
+#goodsList .list_goods li {
+	float: left;
+    width: 356px;
+    height: 682px;
+    padding: 25px 18px 0 0;
+}
+
+#goodsList .list_goods .item {
+	display: block;
+    background-color: #fff;
+    cursor: pointer;
+}
+
+#goodsList .list_goods .thumb {
+	display: block;
+    position: relative;
+    width: 100%;
+    height: 435px;
+    background-color: #f9f8f9;
+}
+
+#goodsList .list_goods .thumb .img {
+	display: block;
+	overflow: hidden;
+    position: relative;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+}
+
+/* 이미지 hover */
+.inner_listgoods .exp_area {
+	position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    z-index: -1;
+    opacity: 0.8;
+    overflow: hidden;
+    min-height: 60px;
+    max-height: 130px;
+    background-color: #000;
+    visibility: hidden;
+}
+
+.inner_listgoods .list li:hover
+.exp_area {
+	z-index: 9;
+	visibility: visible;
+	transition: all 0.3s ease-out;
+}
+
+.inner_listgoods .exp_area .util_bx {
+	position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 60px;
+    text-align: center;
+    background-color: #fff;
+}
+
+.inner_listgoods .util_bx > a {
+	display: inline-block;
+    width: 60px;
+    height: 60px;
+}
+
+.inner_listgoods a.btn_category_product_cart {
+	background: url("../../images/storeList/shopping-cart-line.png") no-repeat center center / 25px;
+}
+.inner_listgoods a.btn_category_product_cart:hover {
+	background: url("../../images/storeList/shopping-cart-line-red.png") no-repeat center center / 25px;
+}
+.inner_listgoods a.btn_category_product_buy {
+	background: url("../../images/storeList/shopping-bag-line.png") no-repeat center center / 25px;
+}
+.inner_listgoods a.btn_category_product_buy:hover {
+	background: url("../../images/storeList/shopping-bag-line-red.png") no-repeat center center / 25px;
+}
+.inner_listgoods a.btn_category_product_heart {
+	background: url("../../images/storeList/hearts-line.png") no-repeat center center / 25px;
+}
+.inner_listgoods a.btn_category_product_heart:hover {
+	background: url("../../images/storeList/hearts-line-red.png") no-repeat center center / 25px;
+}
+
+.blind {
+	overflow: hidden;
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    border: 0;
+    line-height: 0;
+    white-space: normal;
+    word-wrap: break-word;
     word-break: break-all;
 }
-.listinfo .desc .price {
-	padding: 0 5px;
-    font-size: 20px;
-}
-.listinfo .desc .price .won {
-	padding-left: 3px;
-    font-size: 13px;
-    vertical-align: 1px;
-}
 
-
-
-
-
-
-.hover_wrap {
-	display: none;
-	background-color: black;
-	opacity: .7;
-	top: 140px;
-	left: 80px;
-	position: absolute;
-    width: 50px;
-    height: 50px;
-    font-size: 0;
-    border-radius: 50%;
-    z-index: 5;
-}
-.hover_wrap2 {
-	left: 175px;
-}
-.product_molist li:hover
-.hover_wrap {
+.blind:before {
 	display: block;
+    width: 0;
+    height: 0;
+    font-size: 0;
+    content: "";
 }
 
-.product_molist li
-a.btn_category_product_cart {
-	font-size: 0;
-	display: none;
-}
-.product_molist li:hover
-a.btn_category_product_cart {
+/* 상품정보 */
+#goodsList .list_goods .info {
 	display: block;
-	background: url("../../images/store/shopping-cart_white.png") center center no-repeat;
-	z-index: 10;
-	width: 30px;
-    height: 30px;
-    position: absolute;
-    color: white;
-    top: 152px;
-    left: 90px;
-    font-size: 0;
-    background-size: 30px 30px;
-}
-.product_molist li:hover
-a.btn_category_product_cart:hover {
-	background: none;
-	font-size: 14px;
-	top: 147.5px;
-    left: 90px;
-    font-weight: bold;
-    cursor: pointer;
-}
-.product_molist li
-a.btn_category_product_buy {
-	display: none;
-	font-size: 0;
-}
-.product_molist li:hover
-a.btn_category_product_buy {
-	display: block;
-	background: url("../../images/store/shopping-bag_white.png") center center no-repeat;
-	z-index: 10;
-	width: 30px;
-    height: 30px;
-    position: absolute;
-    color: white;
-    top: 150px;
-    left: 184.5px;
-    font-size: 0;
-    background-size: 30px 30px;
-}
-.product_molist li:hover
-a.btn_category_product_buy:hover {
-	background: none;
-	font-size: 14px;
-	top: 147px;
-    left: 184px;
-    font-weight: bold;
-    cursor: pointer;
+	padding: 14px 10px 10px 0;
 }
 
-/* confirm창 커스텀 */
-/* The Modal (background) */
-.confirmLayer {
-	display: none; /* Hidden by default */
-	position: fixed; /* Stay in place */
-	z-index: 1000; /* Sit on top */
-	padding-top: 20%; /* Location of the box */
-	left: 0;
-	top: 0;
-	width: 100%; /* Full width */
-	height: 100%; /* Full height */
-	overflow: auto; /* Enable scroll if needed */
-	background-color: rgb(0,0,0); /* Fallback color */
-	background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
-/* Modal Content */
-.confirm_wrap {
-	position: relative;
-	background-color: #fefefe;
-	margin: auto;
-	padding: 0;
-	border: 1px solid #888;
-	border-radius: 3px;
-	width: 450px;
-	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-	-webkit-animation-name: animatetop;
-	-webkit-animation-duration: 0.4s;
-	animation-name: animatetop;
-	animation-duration: 0.4s;
+#goodsList .list_goods .name {
+	display: block;
     overflow: hidden;
-}
-/* Add Animation */
-@-webkit-keyframes animatetop {
-  from {top:-300px; opacity:0} 
-  to {top:0; opacity:1}
+    max-height: 58px;
+    font-weight: 400;
+    font-size: 20px;
+    color: #333;
+    line-height: 29px;
+    /* display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical; */
+    word-wrap: break-word;
 }
 
-@keyframes animatetop {
-  from {top:-300px; opacity:0}
-  to {top:0; opacity:1}
+#goodsList .list_goods .cost {
+	display: block;
+	padding-top: 7px;
+	font-size: 18px;
+	line-height: 29px;
 }
-.confirm_wrap .header {
-    padding: 10px;
-    background-color: rgb(218, 40, 28);
-    border-bottom: 1px solid #e5e5e5;
+
+#goodsList .list_goods .cost .price {
+	font-weight: 800;
+	color: #333;
 }
-.confirm_wrap .header h3 {
-    font-size: 14px;
-    margin: 0;
-    color: #fff;
-    line-height: 1.5;
-    display: inline-block;
+
+#goodsList .list_goods .desc {
+	display: block;
+    padding-top: 11px;
+    font-size: 13px;
+    color: #999;
+    line-height: 19px;
 }
-/* The Close Button */
-.confirm_wrap .header .close {
-    float: right;
-    cursor: pointer;
-    margin-top: -4px;
-    margin-right: -3px;
+
+#goodsList .list_goods .tag {
+	display: block;
+    padding: 12px 10px 10px 0;
+    cursor: default;
 }
-.confirm_wrap .header .close img {
-    width: 30px;
-    height: 30px;
+
+/* 페이징박스 */
+.page_article .layout-pagination {
+	font-size: 0;
+	margin: 60px 0 0;
+	text-align: center;
 }
-.confirm_wrap .content {
-	padding: 185px 20px 65px;
-    text-align: center;
-    background: url(../../images/store/bg_add_basket.gif) no-repeat 50% 68px;
+
+.layout-pagination-button {
+	display: inline-block;
+    width: 34px;
+    height: 34px;
+    border: 1px solid #ddd;
+    border-left: 0;
+    vertical-align: top;
+}
+
+.layout-pagination-first-page {
+	background: url("../../images/storeList/chevron-double-left.png") no-repeat center center / 15px;
+}
+.layout-pagination-prev-page {
+	background: url("../../images/storeList/chevron-left.png") no-repeat center center / 15px;
+}
+.layout-pagination-next-page {
+	background: url("../../images/storeList/chevron-right.png") no-repeat center center / 15px;
+}
+.layout-pagination-last-page {
+	background: url("../../images/storeList/chevron-double-right.png") no-repeat center center / 15px;
+}
+
+.page_article .layout-pagination a, .page_article .layout-pagination strong {
+	font-weight: 700;
 	font-size: 12px;
 }
-.confirm_wrap .content p {
-	font-weight: bold;
-    color: #2e2e2e;
-}
-.confirm_wrap .footer {
-	padding: 9px;
-    border-top: 1px solid #d7d5d5;
-    text-align: center;
-    background: #f9f6ec;
-}
-.confirm_wrap .footer .btn_cartList {
-	display: inline-block;
-	width: 96px;
-    padding: 6px 8px;
-    border: 1px solid #d1d1d1;
-    border-radius: 3px;
-    font-size: 12px;
-    line-height: 18px;
-    font-weight: normal;
-    vertical-align: middle;
-    text-align: center;
-    color: #ffffff;
-    background-color: rgb(218, 40, 28);
-}
-.confirm_wrap .footer .btn_remove {
-	display: inline-block;
-	width: 96px;
-    padding: 6px 8px;
-    margin-left: 20px;
-    border: 1px solid #d1d1d1;
-    border-radius: 3px;
-    font-size: 12px;
-    line-height: 18px;
-    font-weight: normal;
-    vertical-align: middle;
-    text-align: center;
-    color: #000;
-    background-color: #ffffff;
-    cursor: pointer;
-}
-/***************************************/
-
-
-
-/* 버튼 그룹 */
-#btn_register {
-	background-color: pink;
-	border-radius: 3px;
-}
-#myCart {
-	display: none;
-	position: fixed;
-	width: 55px;
-	height: 50px;
-	bottom: 90px;
-	right: 30px;
-	z-index: 99;
-	font-size: 18px;
-	border: none;
-	outline: none;
-	background-color: gray;
-	color: white;
+.page_article .layout-pagination a {
 	cursor: pointer;
-	border-radius: 4px;
 }
-#myCart:hover, #goTop:hover {
-	background-color: #da281c;
+
+.page_article .layout-pagination-first-page:first-child {
+	border-left: 1px solid #ddd;
 }
-#goTop {
-	display: none;
-	position: fixed;
-	width: 55px;
-	height: 50px;
-	bottom: 30px;
-	right: 30px;
-	z-index: 99;
-	font-size: 18px;
-	border: none;
-	outline: none;
-	background-color: gray;
-	color: white;
-	cursor: pointer;
-	border-radius: 4px;
+
+.layout-pagination-first-page, .layout-pagination-prev-page, .layout-pagination-next-page, .layout-pagination-last-page {
+	text-indent: -9999px;
 }
+.layout-pagination-number {
+	line-height: 33px;
+}
+.layout-pagination-number.active {
+	background-color: #f7f7f7;
+    color: #5f0080;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
