--- a/src/main/webapp/resources/css/store/storeSelect.css
+++ b/src/main/webapp/resources/css/store/storeSelect.css
@@ -18,6 +18,10 @@
 	padding-bottom: 60px;
 }
 
+dl {
+	margin-top: 0;
+	margin-bottom: 0;
+}
 .section_view {
 	width: 1050px;
 	margin: 0 auto;
@@ -246,9 +250,46 @@ img {
 	width: 100%;
 	clear: both;
 }
+
+#sectionView .goods_info {
+	float: right;
+    width: 560px;
+    margin-top: 19px;
+    padding-bottom: 19px;
+    border-top: 1px solid #f4f4f4;
+}
+
+#sectionView .goods_info .list {
+	overflow: hidden;
+    padding: 18px 0;
+    border-bottom: 1px solid #f4f4f4;
+}
+
+#sectionView .goods_info .list.fst {
+    border-bottom: 0;
+    overflow: visible;
+}
+
+#sectionView .goods_info .tit {
+	float: left;
+    width: 150px;
+    font-size: 14px;
+    color: #666;
+    line-height: 20px;
+}
+
+#sectionView .goods_info .desc {
+	overflow: hidden;
+    font-size: 14px;
+    line-height: 20px;
+    word-break: break-all;
+}
+
 /* 드롭다운 */
 .select {
 	position: relative;
+	display: inline-block;
+	width: 50%;
 }
 
 .select .option-list {
@@ -284,13 +325,106 @@ img {
 }
 .select .option-list .option {
   padding: 10px 15px;
+  display: block;
+  position: relative;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  z-index: 10;
+  box-sizing: border-box;
+  background: #fff;
 }
 .select .option-list .option:hover {
   background-color: #f2f2f2;
 }
 /**********************************/
 
+.quantity {
+	float: right;
+	padding: 8px 0;
+    text-align: center;
+    background: #f5f5f5;
+}
+.quantity a {
+	display: inline-block;
+}
+.quantity input[type=text] {
+    width: 90px;
+    height: auto;
+    padding: 6px 10px 10px 10px;
+    border: 0;
+    color: #242021;
+    font-size: 36px;
+    font-weight: bold;
+    text-align: center;
+    vertical-align: middle;
+    background: #f5f5f5;
+    -webkit-box-sizing: border-box;
+}
 
+.total {
+	margin: 15px 0;
+    padding-bottom: 15px;
+    font-size: 20px;
+    color: #231f20;
+    line-height: 28px;
+}
+.total strong {
+    float: left;
+    color: #231f20;
+}
+.total em {
+    float: right;
+    font-weight: bold;
+    color: #fb4357;
+    font-size: 24px;
+    font-style: normal;
+}
+.total:after {
+    content: '';
+    display: block;
+    clear: both;
+}
+.btn_wrap {
+	overflow: hidden;
+}
+.btn_wrap a:first-child {
+	margin-left: 0;
+}
+.btn_wrap a {
+    display: block;
+    float: left;
+    width: 310px;
+    height: 60px;
+    margin-left: 10px;
+    font-weight: 500;
+    font-size: 18px;
+    color: #fff;
+    line-height: 60px;
+    text-align: center;
+    background-color: #373e46;
+}
+.btn_wrap a.btn_cart {
+	width: 60px;
+    font-size: 0;
+    background: #fb4357 url("../../images/storeSelect/shopping-cart_white.png") center center no-repeat;
+    background-size: 30px;
+}
+.btn_wrap a.btn_list {
+	width: 60px;
+    font-size: 0;
+    background: #fb4357 url("../../images/storeSelect/menu-line.png") center center no-repeat;
+    background-size: 30px;
+}
+.btn_buy {
+    width: 310px;
+    height: 60px;
+    margin-left: 10px;
+    font-weight: 500;
+    font-size: 18px;
+    color: #fff;
+    background-color: #373e46;
+    cursor: pointer;
+}
 
 
 
