--- a/src/main/webapp/resources/css/seller/sellerorderlist.css
+++ b/src/main/webapp/resources/css/seller/sellerorderlist.css
@@ -1,6 +1,46 @@
 @charset "UTF-8";
 
+
 .main{
-     margin-left: 260px; /* Same width as the sidebar + left position in px */
-  
+	margin-left: 300px; 
+	margin-top: 100px; 
+}
+
+#customers {
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width:95%;
+  height: 20%;
+}
+#customers td, #customers th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+#customers tr:nth-child(even){background-color: #f2f2f2;}
+
+#customers tr:hover {background-color: #ddd;}
+
+#customers th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: center;
+  background-color: #808080;
+  color: white;
+}
+#customers td{
+	text-align: center;
+}
+
+#customers button{
+	 background-color:#808080;
+	 color: #ffffff;
+	 float:right;
+	 border-radius: 3px;
+	 border: 1px solid #000;  /* 버튼 테두리 */
+}
+
+#customers button:hover{	/* 버튼을 마우스에 올렸을때 */
+	background-color: #ffffff;
+	color: #808080;
 }
