--- a/src/main/webapp/resources/css/mypage.css
+++ b/src/main/webapp/resources/css/mypage.css
@@ -1,15 +1,16 @@
 @charset "UTF-8";
 .mypagesidenav {
-  width: 250px;
+  width: 202px;
   position:absolute;
-  z-index: 1;
+  z-index: 80;
   top: 220px;
-  left: 10px;
+  left: 0px;
   background: #eee;
   overflow-x: hidden;
   padding: 10px 0;
   text-align: center;
   font-size: 20px;
+  display: block;
 }
 
 .mypagesidenav a {
@@ -23,12 +24,3 @@
   color: #007fff;
 }
 
-.main {
-  margin-left: 300px; /* Same width as the sidebar + left position in px */
-  margin-right: 300px;
-  margin-top: 30px;
-  margin-bottom: 30px;
-  
-  font-size: 10px; /* Increased text to enable scrolling */
-  padding: 0px 200px;
-}
