--- a/src/main/webapp/resources/css/mypage/order_history.css
+++ b/src/main/webapp/resources/css/mypage/order_history.css
@@ -1,20 +1,28 @@
 @charset "UTF-8";
 
-
-.main{
-	margin-left: 300px; 
-	margin-top: 100px; 
+.main {
+  margin-left: 205px; /* Same width as the sidebar + left position in px */
+  margin-right: 15px;
+ /*  margin-top: 30px; */
+ /*  margin-bottom: 30px; */
 }
+
+#count {
+	text-align: right;
+}
+
 
 #customers {
   font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
-  width:95%;
-  height: 20%;
+  width: 100%;
 }
+
 #customers td, #customers th {
   border: 1px solid #ddd;
   padding: 8px;
+  text-align: center;
+  font-size: 10px;
 }
 
 #customers tr:nth-child(even){background-color: #f2f2f2;}
@@ -24,14 +32,9 @@
 #customers th {
   padding-top: 12px;
   padding-bottom: 12px;
-  text-align: center;
   background-color: #808080;
   color: white;
 }
-#customers td{
-	text-align: center;
-}
-
 #customers a{
 	color: #000;
 	text-decoration: none;
@@ -44,12 +47,31 @@
 #customers button{
 	 background-color:#808080;
 	 color: #ffffff;
-	 float:right;
 	 border-radius: 3px;
-	 border: 1px solid #000;  /* 버튼 테두리 */
+	 border: none;  /* 버튼 테두리 */
 }
 
 #customers button:hover{	/* 버튼을 마우스에 올렸을때 */
 	background-color: #ffffff;
 	color: #808080;
 }
+
+#bbslist_paging{
+	text-align: center;
+}
+
+/* #bbslist_paging a {
+  color: black;
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
+  transition: background-color .3s;
+}
+
+#bbslist_paging a.active {
+  background-color: dodgerblue;
+  color: white;
+}
+
+#bbslist_paging a:hover:not(.active) {background-color: #ddd;}
+ */
