--- a/src/main/webapp/resources/css/seller/sellerorderlist.css
+++ b/src/main/webapp/resources/css/seller/sellerorderlist.css
@@ -2,19 +2,22 @@
 
 
 .main{
-	margin-left: 300px; 
+	margin-left: 300px;
+	margin-right: 30px; 
 	margin-top: 100px; 
 }
 
 #customers {
   font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
-  width:95%;
+  width:100%;
   height: 20%;
 }
 #customers td, #customers th {
   border: 1px solid #ddd;
   padding: 8px;
+  font-size: 12px;
+  text-align: center;
 }
 
 #customers tr:nth-child(even){background-color: #f2f2f2;}
@@ -24,13 +27,10 @@
 #customers th {
   padding-top: 12px;
   padding-bottom: 12px;
-  text-align: center;
   background-color: #808080;
   color: white;
 }
-#customers td{
-	text-align: center;
-}
+
 
 #customers a{
 	color: #000;
