--- a/src/main/webapp/resources/css/seller/sellerdeliverytemplatelist.css
+++ b/src/main/webapp/resources/css/seller/sellerdeliverytemplatelist.css
@@ -2,7 +2,7 @@
 
 
 .main{
-	margin-left: 600px; 
+	margin-left: 300px;
 	margin-right: 30px; 
 	margin-top: 100px; 
 }
@@ -10,14 +10,14 @@
 #customers {
   font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
-  width:55%;
+  width:100%;
   height: 20%;
 }
 #customers td, #customers th {
   border: 1px solid #ddd;
   padding: 8px;
   font-size: 12px;
-  
+  text-align: center;
 }
 
 #customers tr:nth-child(even){background-color: #f2f2f2;}
@@ -29,7 +29,6 @@
   padding-bottom: 12px;
   background-color: #808080;
   color: white;
-  text-align: center;
 }
 
 
@@ -45,22 +44,12 @@
 #customers button{
 	 background-color:#808080;
 	 color: #ffffff;
+	 float:right;
 	 border-radius: 3px;
 	 border: 1px solid #000;  /* 버튼 테두리 */
 }
 
 #customers button:hover{	/* 버튼을 마우스에 올렸을때 */
-	background-color: #ffffff;
-	color: #808080;
-}
-#savebutton{
-	 background-color:#808080;
-	 color: #ffffff;
-	 border-radius: 3px;
-	 border: 1px solid #000;  /* 버튼 테두리 */
-}
-
-#savebutton:hover{	/* 버튼을 마우스에 올렸을때 */
 	background-color: #ffffff;
 	color: #808080;
 }
