--- a/src/main/webapp/resources/css/seller/sellerSidebar.css
+++ b/src/main/webapp/resources/css/seller/sellerSidebar.css
@@ -7,8 +7,8 @@
   background: #808080;
   overflow-x: hidden;
   text-align: center;
-  position: fixed;
-  top: 0px;
+  position: absolute;
+  top: 235px;
   left: 0px;
   color: white;
 }
