--- a/src/main/webapp/resources/css/seller/sellercalculatelist.css
+++ b/src/main/webapp/resources/css/seller/sellercalculatelist.css
@@ -4,7 +4,7 @@
 .main{
 	margin-left: 300px;
 	margin-right: 30px; 
-	margin-top: 100px; 
+	margin-top: 40px; 
 }
 
 #caltable {
@@ -20,7 +20,7 @@
   text-align: center;
 }
 
-#caltable tr:nth-child(even){background-color: #f2f2f2;}
+#caltable tr:nth-child(even){background-color: #ffffff;}
 
 #caltable tr:hover {background-color: #ddd;}
 
