--- a/src/main/webapp/resources/css/seller/sellerdeliverytemplate.css
+++ b/src/main/webapp/resources/css/seller/sellerdeliverytemplate.css
@@ -4,7 +4,7 @@
 .main{
 	margin-left: 600px; 
 	margin-right: 30px; 
-	margin-top: 100px; 
+	margin-top: 62px; 
 }
 
 #customers {
@@ -20,7 +20,7 @@
   
 }
 
-#customers tr:nth-child(even){background-color: #f2f2f2;}
+#customers tr:nth-child(even){background-color: #ffffff;}
 
 #customers tr:hover {background-color: #ddd;}
 
