--- a/src/main/webapp/resources/css/seller/sellergoodslist.css
+++ b/src/main/webapp/resources/css/seller/sellergoodslist.css
@@ -4,7 +4,6 @@
 .main{
 	margin-left: 300px; 
 	margin-right: 30px; 
-	margin-top: 100px; 
 }
 
 #goodslist_c{
@@ -23,7 +22,7 @@
   font-size: 12px;
 }
 
-#goodslist_t tr:nth-child(even){background-color: #f2f2f2;}
+#goodslist_t tr:nth-child(even){background-color: #ffffff;}
 
 #goodslist_t tr:hover {background-color: #ddd;}
 
@@ -33,9 +32,6 @@
   text-align: center;
   background-color: #808080;
   color: white;
-}
-#goodslist_t td{
-	text-align: center;
 }
 
 #goodslist_t a{
