--- a/src/main/webapp/resources/css/seller/sellerdeliverytemplatelist.css
+++ b/src/main/webapp/resources/css/seller/sellerdeliverytemplatelist.css
@@ -4,7 +4,7 @@
 .main{
 	margin-left: 300px;
 	margin-right: 30px; 
-	margin-top: 40px; 
+	margin-top: 88px; 
 }
 
 #customers {
@@ -12,6 +12,7 @@
   border-collapse: collapse;
   width:100%;
   height: 20%;
+  border: 1px solid #ddd;
 }
 #customers td, #customers th {
   border: 1px solid #ddd;
