--- a/src/main/webapp/resources/css/mypage/order_history.css
+++ b/src/main/webapp/resources/css/mypage/order_history.css
@@ -3,6 +3,7 @@
 .main {
   margin-left: 205px; /* Same width as the sidebar + left position in px */
   margin-right: 15px;
+  margin-bottom: 150px;
  /*  margin-top: 30px; */
  /*  margin-bottom: 30px; */
 }
