--- a/src/main/webapp/resources/css/review/review_list.css
+++ b/src/main/webapp/resources/css/review/review_list.css
@@ -1,8 +1,10 @@
 @charset "UTF-8";
 
 #myreviewlist{
- 	margin-left: 260px; 
+	
+ 	margin-left: 250px; 
     margin-right: 15px; 
+    margin-bottom: 150px; 
 }
 
 #customers {
@@ -16,7 +18,7 @@
   border: 1px solid #ddd;
   text-align: center;
   align-content: center;
-  font-size: 15px;
+  font-size: 12px;
 }
 
 #customers tr:nth-child(even){background-color: #ffffff;}
